# bazel-custom-platforms

./: .bazelrc  MODULE.bazel  README.md
